--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="nome">isabelli</li>
             <li class="nome">júlia</li>
             <li class="nome">rafaela</li>
-            <li class="nome">vinicíus</li>
+            <li class="nome">vinicius</li>
         </ol>
 
 
